  at the same address _and_ have the same type.  See the
  `typedAliases' resource for a discussion.

- When DDD creates a new dependent display, it copies the selection
  state from the originating display.  This way, you can easily unfold
  linked elements simply by clicking `Disp *' again and again.

- Anonymous unions are no longer prefixed by `='.


Source exploration
------------------

- Double-clicking on a function call (that is, an identifier followed
  by a `(' character) will lead you to the function definition.

- Dragging breakpoints works nicely with scrolling.


Printing
--------

- Arc edges are now included in PostScript and FIG output.

- The default setting for printing is to print all displays.


Platforms
---------

- You can build DDD out-of-the box on Windows 95 and NT (using
  cygwin32, http://www.cygnus.com/misc/gnu-win32/).  This is useful
  for people using GCC and GDB on Windows, or for people using DDD as
  a front-end to JDB.  A Windows X server is required.


Customization
-------------

- History customization.  You can customize the number of items in
  pop-down value histories as well as the way they are sorted.  See
  the `popdownHistorySize' and `sortPopdownHistory' resources.


Sessions
--------

- Signal settings are saved with the current session.

- DBX breakpoints are saved referring to the function name, if possible.
  This is useful when working with derived sources.


Program Execution
-----------------

- The function keys F2-F9 are bound to frequently used commands:

	F2 Run
	F3 Run Again
	F4 Kill
	F5 Step		Shift+F5 Step Instruction
	F6 Next		Shift+F6 Next Instruction
	F7 Until
	F8 Finish
	F9 Continue	Shift+F9 Continue Without Signal

  The bindings from DDD 3.0 and earlier (Ctrl+E for Run, Ctrl+I for
  Step, etc.) are still available.

- Improved redirection handling.  You can redirect stderr away from
  the execution window, using `run 2> FILE'.  The debugger command